--- a/helm-charts/values-ai.dev.finto.fi.yaml
+++ b/helm-charts/values-ai.dev.finto.fi.yaml
@@ -8,7 +8,7 @@ nginx:
   baseImage: 'ubi8'
   git:
     uri: 'https://github.com/NatLibFi/FintoAI.git'
-    ref: 'master'
+    ref: 'main'
   contextDir: '/ai.finto.fi'
   buildTriggers:
     - type: GitHub
