--- a/helm-charts/values-ai.dev.finto.fi.yaml
+++ b/helm-charts/values-ai.dev.finto.fi.yaml
@@ -1,34 +1,8 @@
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
-timezone: "Europe/Helsinki"
-
 nginx:
-  version: '1.20'
-  baseImage: 'ubi8'
   git:
+    ref: 'update-2022'
     uri: 'https://github.com/NatLibFi/FintoAI.git'
-    ref: 'main'
   contextDir: '/ai.finto.fi'
-  buildTriggers:
-    - type: GitHub
-      github:
-       secretReference:
-         name: ai-finto-fi-github-webhook-secret
-    - type: ImageChange
-      imageChange: {}
-    - type: ConfigChange
-  # TODO Increase storage when project quota allows
-  logsStorage : 100Mi
-
-annif:
-  version: '0.55.1-ocp'
-  resources:
-    limits:
-      cpu: 1
-      memory: 26Gi
-  modelDataStorage: 25Gi
 
 matomo:
-  serverUrl: '***REMOVED***'
-  siteId: '15'  # TODO Change to prod id when deploying for real
+  siteId: '15'
