--- a/helm-charts/values.yaml
+++ b/helm-charts/values.yaml
@@ -7,6 +7,10 @@ nginx:
   baseImage: 'ubi8'
   # TODO Increase storage when project quota allows
   logsStorage : 100Mi
+  buildTriggers:
+    - type: ImageChange
+      imageChange: {}
+    - type: ConfigChange
 
 annif:
   version: '0.55.1-ocp'
