--- a/helm-charts/templates/nginx-route.yaml
+++ b/helm-charts/templates/nginx-route.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Namespace }}
 spec:
   # TODO: Drop the OCP name part
-  host: {{ .Release.Name | replace "-" "."}}.ext.ocp-kk-test-0.k8s.it.helsinki.fi
+  host: {{ .Release.Name | replace "-" "."}}.ext.ocp-kk-{{ .Values.cluster }}-0.k8s.it.helsinki.fi
   port:
     targetPort: 8080
   to:
