Tmp build textract image from feature branch

--- a/helm-charts/templates/textract-buildconfig.yaml
+++ b/helm-charts/templates/textract-buildconfig.yaml
@@ -17,7 +17,7 @@ spec:
     type: Git
     git:
       uri: 'https://github.com/NatLibFi/textract-docker.git'
-      ref: 'main'
+      ref: 'url-extraction'  # TODO Switch
   strategy:
     type: Docker                      
   triggers:
