--- a/helm-charts/templates/annif-deployment.yaml
+++ b/helm-charts/templates/annif-deployment.yaml
@@ -24,9 +24,9 @@ spec:
         - name: annif
           image: quay.io/natlibfi/annif:{{ .Values.annif.version }}
           command: ["gunicorn", "annif:create_app()", "--bind", "0.0.0.0:8000", "--timeout", "600"]
-          livenessProbe:
             exec:
               command: ["curl", "--fail", "localhost:8000/v1/projects"]
+          readinessProbe:
             failureThreshold: 3
             initialDelaySeconds: 600
             periodSeconds: 60
