--- a/helm-charts/templates/annif-deployment.yaml
+++ b/helm-charts/templates/annif-deployment.yaml
@@ -31,6 +31,7 @@ spec:
             failureThreshold: 3
             initialDelaySeconds: 600
             periodSeconds: 60
+            timeoutSeconds: 10
           resources:
             {{ toYaml .Values.annif.resources | nindent 12 }}
           volumeMounts:
