--- a/helm-charts/templates/annif-deployment.yaml
+++ b/helm-charts/templates/annif-deployment.yaml
@@ -29,8 +29,14 @@ spec:
               path: /v1/projects
               port: 8000
             failureThreshold: 3
-            initialDelaySeconds: 600
             periodSeconds: 60
+            timeoutSeconds: 10
+          startupProbe:
+            httpGet:
+              path: /v1/projects
+              port: 8000
+            failureThreshold: 120
+            periodSeconds: 5
             timeoutSeconds: 10
           resources:
             {{ toYaml .Values.annif.resources | nindent 12 }}
