Use readinessProbe & startupProbe in Annif pod

--- a/helm-charts/templates/annif-deployment.yaml
+++ b/helm-charts/templates/annif-deployment.yaml
@@ -24,12 +24,20 @@ spec:
         - name: annif
           image: quay.io/natlibfi/annif:{{ .Values.annif.version }}
           command: ["gunicorn", "annif:create_app()", "--bind", "0.0.0.0:8000", "--timeout", "600"]
-          livenessProbe:
-            exec:
-              command: ["curl", "--fail", "localhost:8000/v1/projects"]
+          readinessProbe:
+            httpGet:
+              path: /v1/projects
+              port: 8000
             failureThreshold: 3
-            initialDelaySeconds: 600
             periodSeconds: 60
+            timeoutSeconds: 20
+          startupProbe:
+            httpGet:
+              path: /v1/projects
+              port: 8000
+            failureThreshold: 120
+            periodSeconds: 5
+            timeoutSeconds: 10
           resources:
             {{ toYaml .Values.annif.resources | nindent 12 }}
           volumeMounts:
