--- a/helm-charts/templates/nginx-route.yaml
+++ b/helm-charts/templates/nginx-route.yaml
@@ -1,12 +1,11 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-cluster
   labels:
     type: external
     app.kubernetes.io/instance: {{ .Release.Namespace }}
 spec:
-  # TODO: Drop the OCP name part
   host: {{ .Release.Name }}.ext.ocp-kk-{{ .Values.cluster }}-0.k8s.it.helsinki.fi
   port:
     targetPort: 8080
@@ -17,6 +16,3 @@ spec:
   tls:
     termination: edge
     insecureEdgeTerminationPolicy: Redirect
-  # key:  TODO Add secrets
-  # certificate:
-  # caCertificate:
