Clean up TODOs; Switch to real Matomo site id for api.annif.org

--- a/helm-charts/values-annif.dev.finto.fi.yaml
+++ b/helm-charts/values-annif.dev.finto.fi.yaml
@@ -1,4 +1,4 @@
-cluster: 'test'  # TODO Drop this when hostname is transferred
+cluster: 'test'
 nginx:
   git:
     uri: 'https://github.com/NatLibFi/FintoAI.git'
