--- a/helm-charts/templates/annif-deployment.yaml
+++ b/helm-charts/templates/annif-deployment.yaml
@@ -43,8 +43,7 @@ spec:
           volumeMounts:
             - mountPath: /annif-projects
               name: model-data
-              # TODO: Switch to readOnly, if model syncing method allows.
-              #readOnly: true
+              readOnly: False
           env:
             - name: TZ
               value: {{ .Values.timezone }}
