--- a/helm-charts/values-api.annif.org.yaml
+++ b/helm-charts/values-api.annif.org.yaml
@@ -1,4 +1,4 @@
-cluster: 'prod'  # TODO Drop this when hostname is transferred
+cluster: 'prod'
 nginx:
   git:
     uri: 'https://github.com/NatLibFi/FintoAI.git'
@@ -6,4 +6,4 @@ nginx:
   contextDir: '/api.annif.org'
 
 matomo:
-  siteId: '14'  # TODO Change to prod id (=13) when deploying for real
+  siteId: '13'
