Clean up TODOs; Switch to real Matomo site id for ai.finto.fi

--- a/helm-charts/values-ai.finto.fi.yaml
+++ b/helm-charts/values-ai.finto.fi.yaml
@@ -1,4 +1,4 @@
-cluster: 'prod'  # TODO Drop this when hostname is transferred
+cluster: 'prod'
 nginx:
   git:
     ref: 'main'
@@ -6,4 +6,4 @@ nginx:
   contextDir: '/ai.finto.fi'
 
 matomo:
-  siteId: '15'  # TODO Change to prod id when deploying for real
+  siteId: '12'
